--- a/SalesWebMvc/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -1,7 +1,85 @@
-﻿@{
-    ViewData["Title"] = "Index";
+﻿@**Definir um objeto model, que é o parâmetro passado pela View*@
+@model IEnumerable<SalesWebMvc.Models.Seller>
+
+@{
+    ViewData["Title"] = "Vendedores";
 }
 
-<h2> Vendedores </h2>
+@*Título da página*@
+<h2> @ViewData["Title"] </h2>
 
-<p> Página dos vendedores </p>
+<p> Informações dos vendedores </p>
+
+@*Tabela contendo os vendedores
+    Utilizei classes do Bootstrap para lidar com o visual da tabela
+*@
+<table class="table table-striped table-hover table-responsive">
+    @*Cabeçalho da tabela*@
+    <thead>
+        @*Linha*@
+        <tr class="success">
+            @*Coluna do cabeçalho*@
+            <th>
+                @*Nome do vendedor*@
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+
+            <th>
+                @*Email*@
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+
+            <th>
+                @*Data de nascimento*@
+                @Html.DisplayNameFor(model => model.BirthDate)
+            </th>
+
+            <th>
+                @*Salário base*@
+                @Html.DisplayNameFor(model => model.BaseSalary)
+            </th>
+
+            @*Espaço para os links*@
+            <th></th>
+        </tr>
+    </thead>
+
+    @*Corpo da tabela*@
+    <tbody>
+        @foreach (var seller in Model)
+        {
+            @*Linha*@
+            <tr>
+                @*Coluna*@
+                <td>
+                    @*Nome*@
+                    @Html.DisplayFor(modelItem => seller.Name)
+                </td>
+
+                <td>
+                    @*Email*@
+                    @Html.DisplayFor(modelItem => seller.Email)
+                </td>
+
+                <td>
+                    @*Data de nascimento*@
+                    @Html.DisplayFor(modelItem => seller.BirthDate)
+                </td>
+
+                <td>
+                    @*Salário base*@
+                    @Html.DisplayFor(modelItem => seller.BaseSalary)
+                </td>
+
+                <td>
+                    @*Ação => Editar*@
+                    <a asp-action="Edit"    asp-route-id="@seller.Id">Editar</a>
+                    <a asp-action="Details" asp-route-id="@seller.Id">Detalhes</a>
+                    <a asp-action="Delete"  asp-route-id="@seller.Id">Remover</a>
+                </td>
+            </tr>
+        }
+
+    </tbody>
+
+</table>
