Formulário básico de cadastro de vendedor

--- a/SalesWebMvc/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -8,6 +8,11 @@
 @*Título da página*@
 <h2> @ViewData["Title"] </h2>
 
+<p> 
+    @*Link para criar/cadastrar um novo vendedor*@
+    <a asp-action="Create" class="btn btn-default"> Novo vendedor </a>
+</p>
+
 <p> Informações dos vendedores </p>
 
 @*Tabela contendo os vendedores
