Criação da navegação das páginas e sistema de busca

--- a/SalesWebMvc/SalesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SalesWebMvc/SalesWebMvc/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Início</a></li>
                     <li><a asp-area="" asp-controller="Departments" asp-action="Index">Departamentos</a></li>
                     <li><a asp-area="" asp-controller="Sellers" asp-action="Index">Vendedores</a></li>
+                    <li><a asp-area="" asp-controller="SalesRecords" asp-action="Index">Vendas</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Mais informações</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contato</a></li>
                 </ul>
